--- a/ckanext/tess/templates/node_template.html
+++ b/ckanext/tess/templates/node_template.html
@@ -1,6 +1,6 @@
 {# node_name and country_code must be set from the page that extends this template.
- If you do not set node_name to be a valid Elixir Node name like 'United Kingdom' or 'Switzerland'
- you risk reversing the Entropy of the Universe and destroying us all. You've been warned!
+If you do not set node_name to be a valid Elixir Node name like 'United Kingdom' or 'Switzerland'
+you risk reversing the Entropy of the Universe and destroying us all. You've been warned!
 #}
 
 {% extends "page.html" %}
@@ -15,34 +15,36 @@
 {% endblock %}
 
 {% block primary %}
-  {% snippet "nodes/snippets/helper.html" %}
-  <div class="row-fluid">
-     <div class="span12">
-         {% block node_heading %}
-             <h1 class="page-heading" style="text-align:center">{{ node_name }}</h1>
-         {% endblock %}
-     </div>
-  </div>
-  <div class="row-fluid">
-       {% block materials %}
-            {% snippet "nodes/snippets/materials_for_node.html", node=node_name %}    
-       {% endblock %}
-       {% block news %}
-            {% snippet "nodes/snippets/news_for_node.html", node=node_name %}
-       {% endblock %}
-       {% block events %}
-            {% snippet "nodes/snippets/events_for_node.html", node=node_name %}
-       {% endblock %}
-       {% block staff %}
-            {% snippet "nodes/snippets/staff_for_node.html", node=node_name %}
-       {% endblock %}
-       {% block organizations %}
-            {% snippet "nodes/snippets/organizations_for_node.html", node=node_name %}
-       {% endblock %}
-  </div>
+{% snippet "nodes/snippets/helper.html" %}
 
-<br>
+{% block node_heading %}
+<div class="row-fluid">
+    <div class="span12">
+        <h1 class="page-heading" style="text-align:center">{{ node_name }}</h1>
+    </div>
+</div>
 {% endblock %}
- 
+
+<div class="module-content">
+    <ul style="position: relative;" class="media-grid masonry" data-module="media-grid">
+        {% block news %}
+        {% snippet "nodes/snippets/news_for_node.html", node=node_name %}
+        {% endblock %}
+        {% block organizations %}
+        {% snippet "nodes/snippets/organizations_for_node.html", node=node_name %}
+        {% endblock %}
+        {% block materials %}
+        {% snippet "nodes/snippets/materials_for_node.html", node=node_name %}
+        {% endblock %}
+        {% block events %}
+        {% snippet "nodes/snippets/events_for_node.html", node=node_name %}
+        {% endblock %}
+        {% block staff %}
+        {% snippet "nodes/snippets/staff_for_node.html", node=node_name %}
+        {% endblock %}
+        {% endblock %}
+    </ul>
+</div>
+
 {% block secondary %}
 {% endblock %}
