--- a/ckanext/tess/templates/home/about.html
+++ b/ckanext/tess/templates/home/about.html
@@ -7,13 +7,23 @@
 {% endblock %}
 
 {% block primary %}
+
+<nav class="section navigation">
+  <ul class="nav nav-pills">
+    <li><a href="#about">About</a></li>
+    <li><a href="#contact">Contact</a></li>
+    <li><a href="#faq">FAQ</a></li>
+    <li><a href="#software">Software</a></li>
+  </ul>
+</nav>
+
 <article class="module">
     <div class="module-content">
         {% block about %}
         {% if g.site_about %}
         {{ h.render_markdown(g.site_about) }}
         {% else %}
-        <h1 class="page-heading">{{ _('About') }}</h1>
+        <a name="about"></a><h1 class="page-heading">{{ _('About') }}</h1>
         {% trans %}
         <p>
             TeSS (ELIXIR Training eSupport System) is <a target="_blank" href="http://www.elixir-europe.org/">ELIXIR's</a> training portal,
@@ -30,7 +40,7 @@
             challenge by taking a UK and European lead in training research scientists in computing, statistics and bioinformatics.
             By plugging the skills gap we aim to strengthen science across Europe, and will set the agenda for training needs in the future.
         </p>
-        <h2>Contact us</h2>
+        <a name="contact"></a><h2>Contact us</h2>
         <p>If you have any queries about TeSS, please email one of the following people (in alphabetical order):</p>
         <p><a href="mailto:teresa.k.attwood@manchester.ac.uk">Teresa (Terri) Atwood</a> (ELIXIR-UK/TeSS co-investigator @Manchester)</p>
         <p><a href="mailto:niall.beard@manchester.ac.uk">Niall Beard</a> (ELIXIR-UK/TeSS developer @Manchester)</p>
