Styled nodes pages with blocks of snippets furtner.

--- a/ckanext/tess/templates/node_template.html
+++ b/ckanext/tess/templates/node_template.html
@@ -27,24 +27,41 @@ you risk reversing the Entropy of the Universe and destroying us all. You've bee
 
 <div class="module-content">
     <ul style="position: relative;" class="media-grid masonry" data-module="media-grid">
+
         {% block news %}
-        {% snippet "nodes/snippets/news_for_node.html", node=node_name %}
+        <li style="position: absolute; top: 0px; left: 0px; width: 280px; border: 1px solid #DDD;" class="media-item masonry-brick">
+            {% snippet "nodes/snippets/news_for_node.html", node=node_name %}
+        </li>
         {% endblock %}
+
         {% block organizations %}
-        {% snippet "nodes/snippets/organizations_for_node.html", node=node_name %}
+        <li style="position: absolute; top: 0px; left: 0px; width: 280px; border: 1px solid #DDD;" class="media-item masonry-brick">
+            {% snippet "nodes/snippets/organizations_for_node.html", node=node_name %}
+        </li>
         {% endblock %}
+
         {% block materials %}
-        {% snippet "nodes/snippets/materials_for_node.html", node=node_name %}
+        <li style="position: absolute; top: 0px; left: 0px; width: 280px; border: 1px solid #DDD;" class="media-item masonry-brick">
+            {% snippet "nodes/snippets/materials_for_node.html", node=node_name %}
+        </li>
         {% endblock %}
+
         {% block events %}
-        {% snippet "nodes/snippets/events_for_node.html", node=node_name %}
+        <li style="position: absolute; top: 0px; left: 0px; width: 280px; border: 1px solid #DDD;" class="media-item masonry-brick">
+            {% snippet "nodes/snippets/events_for_node.html", node=node_name %}
+        </li>
         {% endblock %}
+
         {% block staff %}
-        {% snippet "nodes/snippets/staff_for_node.html", node=node_name %}
+        <li style="position: absolute; top: 0px; left: 0px; width: 280px; border: 1px solid #DDD;" class="media-item masonry-brick">
+            {% snippet "nodes/snippets/staff_for_node.html", node=node_name %}
+        </li>
         {% endblock %}
-        {% endblock %}
+
     </ul>
 </div>
+
+{% endblock %}
 
 {% block secondary %}
 {% endblock %}
