--- a/ckanext/tess/templates/nodes/GB.html
+++ b/ckanext/tess/templates/nodes/GB.html
@@ -50,7 +50,7 @@ The blocks are listed below. Move them out of this comment bracket to override.
 
 {% block news %}
 <li style="position: absolute; top: 0px; left: 0px; width: 280px; border: 1px solid #DDD;" class="media-item masonry-brick">
-    <h2>Latest News</h2>
+    <h2>News</h2>
     <hr/>
     <div>
         <a class="twitter-timeline" href="https://twitter.com/ElixirNodeUk" data-widget-id="559708972698308608">Tweets by @ElixirNodeUk</a>
@@ -61,7 +61,7 @@ The blocks are listed below. Move them out of this comment bracket to override.
 
 {% block organizations %}
 <li style="position: absolute; top: 0px; left: 0px; width: 280px; border: 1px solid #DDD;" class="media-item masonry-brick">
-    <h2>Member Institutions</h2>
+    <h2>Member institutions</h2>
     <hr/>
     <div style="margin-left:auto; margin-right:auto; width:90%">
         <a href="http://www.ox.ac.uk/GB.html"><h3>The University of Oxford</h3>
@@ -98,4 +98,11 @@ The blocks are listed below. Move them out of this comment bracket to override.
     Milo Thurston
 </li>
 {% endblock %}
+
+{% block events %}
+{% endblock %}
+
+{% block materials %}
+{% endblock %}
+
 
