--- a/ckanext/tess/templates/nodes/NL.html
+++ b/ckanext/tess/templates/nodes/NL.html
@@ -57,6 +57,9 @@ The blocks are listed below. Move them out of this comment bracket to override.
 </li>
 {% endblock %}
 
+{% block news %}
+{% endblock %}
+
 {% block staff %}
 <li style="position: absolute; top: 0px; left: 0px; width: 280px; border: 1px solid #DDD;" class="media-item masonry-brick">
     <h2>Staff</h2>
@@ -73,5 +76,11 @@ The blocks are listed below. Move them out of this comment bracket to override.
     <img src="/images/nodes/nl/hooft.jpg" style="max-height:100px" class="img-rounded"/>
     <a href='mailto: '>Rob Hooft</a>
 </li>
+{% endblock %}
+
+{% block events %}
+{% endblock %}
+
+{% block materials %}
 {% endblock %}
 
