--- a/ckanext/tess/templates/nodes/snippets/organizations_for_node.html
+++ b/ckanext/tess/templates/nodes/snippets/organizations_for_node.html
@@ -1,5 +1,4 @@
+<h2>Member institutions</h2>
+<hr/>
+<p class="module-content empty">No member institutions found for this node</p>
 
-{% set organization = h.get_node_organizations(node) %}
-{% if datasets != None %}
-    {# TODO: Implement a nice organizations div #}
-{% endif %}
