--- a/ckanext/tess/templates/nodes/snippets/staff_for_node.html
+++ b/ckanext/tess/templates/nodes/snippets/staff_for_node.html
@@ -1,18 +1,3 @@
-
-{% set datasets = h.get_node_materials(node) %}
-{% if datasets != None %}
-
-<div class="feed">
-    <h2>Staff</h2>
-    <hr/>
-    Chris Ponting <br>
-    Carole Goble <br>
-    Terri Attwood <br>
-    Susanna Assunta-Sansone <br>
-    Aleksandra Nenadic <br>
-    Lee Larcombe <br>
-    Manuel Corpas <br>
-    Niall Beard <br>
-    Milo Thurston
-</div>
-{% endif %}
+<h2>Staff</h2>
+<hr/>
+<p class="module-content empty">No staff found for this node</p>
