--- a/ckanext/tess/templates/nodes/EE.html
+++ b/ckanext/tess/templates/nodes/EE.html
@@ -5,10 +5,20 @@
 {#
 Override blocks from the nodes_template.html here to add your own custom configuration.
 The blocks are listed below. Move them out of this comment bracket to override.
+
 {% block materials %}
 {% endblock %}
+
 {% block events %}
 {% endblock %}
-{% block related_orgs %}
+
+{% block organizations %}
 {% endblock %}
+
+{% block staff %}
+{% endblock %}
+
+{% block news %}
+{% endblock %}
+
 #}
