--- a/ckanext/tess/templates/home/layout1.html
+++ b/ckanext/tess/templates/home/layout1.html
@@ -1,8 +1,6 @@
-<div class="flash-messages">
-      <div class="alert fade in notice">
-          Please help us shape TeSS to your needs by filling in this <a href="http://goo.gl/forms/QKt7qjL10G">questionnaire</a>.
-      </div>
-</div>
+<!--
+{{ h.flash_notice('Please help us shape TeSS to your needs by filling in this <a href="http://goo.gl/forms/QKt7qjL10G">questionnaire</a>.', allow_html=True) }}
+-->
 <div role="main" class="hero">
     <div class="container">
         <div class="row row1" style="/*padding-bottom:10px; border-bottom-style: solid; border-width: 1px; border-color: #CECECE;*/">
