Added elixir logo for filter titles on left hand side menus.

--- a/ckanext/tess/templates/nodes/snippets/nodes_list.html
+++ b/ckanext/tess/templates/nodes/snippets/nodes_list.html
@@ -1,8 +1,8 @@
 <div class="module module-narrow module-shallow">
     <h2 class="module-heading">
-        {{ _('Nodes') }}
+        <div class="icon-elixir"></div>{{ _('Nodes') }}
     </h2>
-    <div class="module-content">
+    <nav>
         <ul class="unstyled nav nav-simple nav-facet">
             <li class="nav-item">
                 <a href="/nodes/hub.html" title="">
@@ -32,5 +32,5 @@
             </li>
             {% endfor %}
         </ul>
-    </div>
+    </nav>
 </div>
