Fixed Czech Republic's flag.

--- a/ckanext/tess/templates/nodes/index-new.html
+++ b/ckanext/tess/templates/nodes/index-new.html
@@ -41,7 +41,7 @@ you risk reversing the Entropy of the Universe and destroying us all. You've bee
 {# Country flags obtained from https://github.com/googlei18n/region-flags/tree/master/png #}
 {% set nodes = [
 {'name' : 'Belgium', 'country_code' : 'BE', 'hon' : 'Head of node', 'trc': 'Training co-ord', 'tc' : 'Tech co-ord'},
-{'name' : 'Czech Republic', 'country_code' : 'CR', 'hon' : 'Head of node', 'trc': 'Training co-ord', 'tc' : 'Tech co-ord'},
+{'name' : 'Czech Republic', 'country_code' : 'CZ', 'hon' : 'Head of node', 'trc': 'Training co-ord', 'tc' : 'Tech co-ord'},
 {'name' : 'Denmark', 'country_code' : 'DK', 'hon' : 'Head of node', 'trc': 'Training co-ord', 'tc' : 'Tech co-ord'},
 {'name' : 'EMBL-EBI', 'country_code' : 'EMBL-EBI', 'hon' : 'Head of node', 'trc': 'Training co-ord', 'tc' : 'Tech co-ord'},
 {'name' : 'Estonia', 'country_code' : 'EE', 'hon' : 'Head of node', 'trc': 'Training co-ord', 'tc' : 'Tech co-ord'},
