--- a/ckanext/tess/templates/nodes/snippets/helper.html
+++ b/ckanext/tess/templates/nodes/snippets/helper.html
@@ -10,7 +10,7 @@
       <ul class="user-dropdown-menu dropdown-menu pull-left" role="menu">
         <li><a href="/nodes/hub.html">The Hub</a></li>
         <li><a href="/nodes/BE.html">Belgium</a></li>
-        <li><a href="/nodes/CR.html">Czech Republic</a></li>
+        <li><a href="/nodes/CZ.html">Czech Republic</a></li>
         <li><a href="/nodes/DK.html">Denmark</a></li>
         <li><a href="/nodes/EMBL-EBI.html">EMBL-EBI</a></li>
         <li><a href="/nodes/EE.html">Estonia</a></li>
@@ -36,7 +36,7 @@
 <!--
         <li><a href="/nodes/hub.html">The Hub</a></li>
         <li><a href="/nodes/BE.html">Belgium</a></li>
-        <li><a href="/nodes/CR.html">Czech Republic</a></li>
+        <li><a href="/nodes/CZ.html">Czech Republic</a></li>
         <li><a href="/nodes/DK.html">Denmark</a></li>
         <li><a href="/nodes/EMBL-EBI.html">EMBL-EBI</a></li>
         <li><a href="/nodes/EE.html">Estonia</a></li>
