--- a/ckanext/tess/templates/nodes/snippets/nodes_list.html
+++ b/ckanext/tess/templates/nodes/snippets/nodes_list.html
@@ -10,7 +10,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a href="/nodes/CR.html" title="">
+                <a href="/nodes/CZ.html" title="">
                     <span>Czech Republic</span>
                 </a>
             </li>
