--- a/ckanext/tess/templates/nodes/CZ.html
+++ b/ckanext/tess/templates/nodes/CZ.html
@@ -1,5 +1,5 @@
 {% set node_name = 'Czech Republic' %}
-{% set country_code = 'CR' %}
+{% set country_code = 'CZ' %}
 {% extends "node_template.html" %}
 
 {#
